plugins/custom-recipe-templates/assets/css/custom-recipe-submission.css
/* ... */
#wpurp_user_submission_form .instruction-buttons {
  float: left;
}

#wpurp_user_submission_form .instruction-image {
  float: left;
  width: 150px;
  padding: 0 20px;
}

#wpurp_user_submission_form input.recipe_thumbnail_image:hover {
	background-color:#7b7b7b;
	color: #ffffff!important;
}

#wpurp_user_submission_form label.add-image-button:hover,
#wpurp_user_submission_form .button:hover {
	background-color:#b2b2b2;

}

#wpurp_user_submission_form label.add-image-button:before,
#wpurp_user_submission_form .button a:before {
	font-family:FontAwesome;
	content:"\f055";
	padding:0 10px;
}


#wpurp_user_submission_form span.ingredients-delete:before,
#wpurp_user_submission_form span.ingredient-group-delete:before,
#wpurp_user_submission_form span.instructions-delete:before,
#wpurp_user_submission_form span.instruction-group-delete:before {
  content: "\f014";
  font-family: FontAwesome;
  font-size:20px;
  padding:10px;
}
	
#wpurp_user_submission_form a,
#wpurp_user_submission_form a:hover {
	font-weight:400;
	text-decoration:none;
	color: #616161;
}

#wpurp_user_submission_form #wp-recipe_notes-wrap,
#wpurp_user_submission_form #wp-recipe_notes-editor-container {
  float: left;
  clear: both;
  width: 100%;
}






/* Inputs formatting 
-------------------------------------------------*/
#wpurp_user_submission_form input[type=text],
#wpurp_user_submission_form select,
#wpurp_user_submission_form textarea {
  border: 1px solid #ddd;
  border-radius:5px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,.07);
  background-color: #fff;
  color: #32373c;
  outline: 0;
  transition: 50ms border-color ease-in-out;
}


#wpurp_user_submission_form input:focus, 
#wpurp_user_submission_form select:focus, 
#wpurp_user_submission_form textarea:focus {
  border-color: #5b9dd9;
  box-shadow: 0 0 2px rgba(30,140,190,.8);
}

/* Specific input formatting */

#wpurp_user_submission_form .recipe-tags-container input[type=text] {
  box-shadow: none;
	border:none;
}


textarea.ingredients_notes {
    resize: vertical;
    padding: 10px;
}


#wpurp_user_submission_form  .recipe-general-form-field input {
 	width:auto;
}

#wpurp_user_submission_form input#recipe_passive_time,
#wpurp_user_submission_form input#recipe_cook_time,
#wpurp_user_submission_form input#recipe_prep_time,
#wpurp_user_submission_form input#recipe_servings {
    width: 50px!important;
}


/* Buttons Formatting
-------------------------------------------*/

.wpurp-user-submissions.button-area button {
    float: left;
    width: 100px;
    height: 50px;
    background-color: #CCC;
    color: white;
    border: 1px solid #666;
    margin:10px;
}

#wpurp_user_submission_form div#qt_recipe_notes_toolbar {
	display:none;
}

.afu-process-file label {
  font-family: sans-serif!important;
  background-color: #eeeeee;
  font-size: 14px;
  border-radius: 5px;
}


/* MEDIA QUERIES
--------------------------------------------*/

/* Smartphone */
@media only screen 
	and (max-width:870px) {
		
	#wpurp_user_submission_form {
    background-color: initial;
    padding: 0;
	}	

	#wpurp_user_submission_form .instruction-text {
	  width: 100%;
	  clear:both;
	}

	#wpurp_user_submission_form .instruction-image {
	  width: 50%;
    clear: left;
    margin: 0;
    padding: 0;
	}
		
	#wpurp_user_submission_form table#recipe-ingredients {
	  border-collapse:separate; 
	  border-spacing: 0 20px;
	}	
	
	#wpurp_user_submission_form td.recipe-general-form-label {
    float: left;
	}
	
	#wpurp_user_submission_form td.recipe-general-form-field {
    float: left;
    width: 100%;
	}	
	
	#wpurp_user_submission_form tr.ingredient td {
		padding:0 10px;	
		width:100%;
		float:left;
	}	

	#wpurp_user_submission_form tr.ingredient td textarea,
	#wpurp_user_submission_form tr.ingredient td input {
		width:68%;
	}	
	
	#wpurp_user_submission_form span.mobile-display {
		display:inline-block!important;
    float: left;
    width: 30%;
    font-family: sans-serif;
    font-size: 14px;
    padding: 10px;
    font-weight: bold;
	}
	
	#wpurp_user_submission_form .mobile-hidden,
	#wpurp_user_submission_form tr.ingredient-field-header {
  	display:none!important;
	}		
		
	#wpurp_user_submission_form tr td.delete-button {
    width:50px;
    float:right;
    padding:9px;
	}	
	
}

